기본데이타에서 번호를 추출하는 함수 구현

--- a/src/formFiles/MainWindow.ui
+++ b/src/formFiles/MainWindow.ui
@@ -137,6 +137,9 @@
         <layout class="QGridLayout" name="optionLayoutNumber">
          <item row="0" column="0">
           <widget class="QCheckBox" name="cbNumber">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
            <property name="text">
             <string>번호별 통계</string>
            </property>
